tools/c7n_gcp/tests/data/flights/test_vpc_firewall_filter_query/get-compute-v1-projects-cloud-custodian-global-networks-default-getEffectiveFirewalls_1.json
{
  "headers": {
    "content-type": "application/json; charset=UTF-8",
    "vary": "Origin, X-Origin, Referer",
    "date": "Thu, 19 May 2022 10:54:36 GMT",
    "server": "ESF",
    "cache-control": "private",
    "x-xss-protection": "0",
    "x-frame-options": "SAMEORIGIN",
    "x-content-type-options": "nosniff",
    "alt-svc": "h3=\":443\"; ma=2592000,h3-29=\":443\"; ma=2592000,h3-Q050=\":443\"; ma=2592000,h3-Q046=\":443\"; ma=2592000,h3-Q043=\":443\"; ma=2592000,quic=\":443\"; ma=2592000; v=\"46,43\"",
    "transfer-encoding": "chunked",
    "status": "200",
    "content-length": "4060",
    "-content-encoding": "gzip",
    "content-location": "https://compute.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/default/getEffectiveFirewalls?alt=json"
  },
  "body": {
    "firewalls": [
      {
        "kind": "compute#firewall",
        "id": "571947857286432753",
        "creationTimestamp": "2021-09-07T03:04:14.041-07:00",
        "name": "allow-ssh",
        "description": "",
        "network": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/default",
        "priority": 900,
        "sourceRanges": [
          "93.76.224.124",
          "0.0.0.0/0"
        ],
        "allowed": [
          {
            "IPProtocol": "all"
          }
        ],
        "direction": "INGRESS",
        "logConfig": {
          "enable": false
        },
        "disabled": false,
        "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls/allow-ssh"
      },
      {
        "kind": "compute#firewall",
        "id": "3584003637362084355",
        "creationTimestamp": "2021-01-15T02:56:44.131-08:00",
        "name": "default-allow-https",
        "description": "",
        "network": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/default",
        "priority": 1000,
        "sourceRanges": [
          "0.0.0.0/0"
        ],
        "targetTags": [
          "https-server"
        ],
        "allowed": [
          {
            "IPProtocol": "tcp",
            "ports": [
              "443"
            ]
          }
        ],
        "direction": "INGRESS",
        "logConfig": {
          "enable": false
        },
        "disabled": false,
        "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls/default-allow-https"
      },
      {
        "kind": "compute#firewall",
        "id": "8350604917086132869",
        "creationTimestamp": "2021-02-08T03:45:46.786-08:00",
        "name": "allow-ingress-from-iap",
        "description": "",
        "network": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/default",
        "priority": 1000,
        "sourceRanges": [
          "35.235.240.0/20",
          "37.214.38.88",
          "185.38.216.32",
          "93.76.224.124"
        ],
        "allowed": [
          {
            "IPProtocol": "tcp",
            "ports": [
              "22",
              "3389"
            ]
          }
        ],
        "direction": "INGRESS",
        "logConfig": {
          "enable": false
        },
        "disabled": false,
        "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls/allow-ingress-from-iap"
      },
      {
        "kind": "compute#firewall",
        "id": "2383043984399442858",
        "creationTimestamp": "2021-07-14T10:22:13.246-07:00",
        "name": "allow-defectdojo",
        "description": "DefectDojo",
        "network": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/default",
        "priority": 1000,
        "sourceRanges": [
          "185.38.216.32",
          "0.0.0.0/0"
        ],
        "targetTags": [
          "defect-dojo"
        ],
        "allowed": [
          {
            "IPProtocol": "tcp",
            "ports": [
              "8080",
              "8443",
              "22"
            ]
          }
        ],
        "direction": "INGRESS",
        "logConfig": {
          "enable": false
        },
        "disabled": false,
        "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls/allow-defectdojo"
      },
      {
        "kind": "compute#firewall",
        "id": "8010559570146281988",
        "creationTimestamp": "2021-01-15T02:56:43.908-08:00",
        "name": "default-allow-http",
        "description": "",
        "network": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/default",
        "priority": 1000,
        "sourceRanges": [
          "0.0.0.0/0"
        ],
        "targetTags": [
          "http-server"
        ],
        "allowed": [
          {
            "IPProtocol": "tcp",
            "ports": [
              "80"
            ]
          }
        ],
        "direction": "INGRESS",
        "logConfig": {
          "enable": false
        },
        "disabled": false,
        "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls/default-allow-http"
      }
    ]
  }
}
