tools/c7n_gcp/tests/data/flights/test_vpc_firewall_filter_query/get-compute-v1-projects-cloud-custodian-global-networks-kseoji-getEffectiveFirewalls_1.json
{
  "headers": {
    "content-type": "application/json; charset=UTF-8",
    "vary": "Origin, X-Origin, Referer",
    "date": "Thu, 19 May 2022 10:54:37 GMT",
    "server": "ESF",
    "cache-control": "private",
    "x-xss-protection": "0",
    "x-frame-options": "SAMEORIGIN",
    "x-content-type-options": "nosniff",
    "alt-svc": "h3=\":443\"; ma=2592000,h3-29=\":443\"; ma=2592000,h3-Q050=\":443\"; ma=2592000,h3-Q046=\":443\"; ma=2592000,h3-Q043=\":443\"; ma=2592000,quic=\":443\"; ma=2592000; v=\"46,43\"",
    "transfer-encoding": "chunked",
    "status": "200",
    "content-length": "3",
    "-content-encoding": "gzip",
    "content-location": "https://compute.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/kseoji/getEffectiveFirewalls?alt=json"
  },
  "body": {}
}
